# design-patterns

./: README.md  agenda.md  pyproject.toml
DP/: builder.py
DP/behavioral/: command.py  observer.py  strategy.py
DP/creational/: abstractFactory.py  factory.py  prototype.py  singleton.py
DP/structural/: adapter.py  bridge.py  composite.py  decorator_pattern.py  facade.py  flyweight.py  proxy.py
SOLID/: DIP.py  ISP.py  LSP.py  OCP.py  SRP.py
