[tool.poetry]
name = "design-patterns"
version = "0.1.0"
description = ""
authors = ["yusuf <yachour31@gmail.com>"]
readme = "README.md"
packages = [{include = "design_patterns"}]

[tool.poetry.dependencies]
python = "^3.10"
typing-extensions = "^4.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
